Change 873 Version ver-4_1_1_32 Aranea RC1 code improvement
git-svn-id: file:///root/var/svn/aranea/branches/latest@5540 baba0d3d-6527-0410-ba98-ffd8059025de